--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -49,16 +49,15 @@
   transform: translate(-50%, -50%);
 }
 
-i.icon {
+i.icon {  
   display: block;
   width: dp2rem(30);
   height: dp2rem(30);
   margin: 0 auto;
   margin-bottom: dp2rem(10);
-  background-size: 100%;
-
+  background-size: 100%; 
   &.icon-loading {
-    background-image: url("data:image/svg+xml;charset=utf-8,<svg viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><defs><line id='l' x1='60' x2='60' y1='7' y2='27' stroke='%23fff' stroke-width='11' stroke-linecap='round'/></defs><g><use xlink:href='%23l' opacity='.27'/><use xlink:href='%23l' opacity='.27' transform='rotate(30 60,60)'/><use xlink:href='%23l' opacity='.27' transform='rotate(60 60,60)'/><use xlink:href='%23l' opacity='.27' transform='rotate(90 60,60)'/><use xlink:href='%23l' opacity='.27' transform='rotate(120 60,60)'/><use xlink:href='%23l' opacity='.27' transform='rotate(150 60,60)'/><use xlink:href='%23l' opacity='.37' transform='rotate(180 60,60)'/><use xlink:href='%23l' opacity='.46' transform='rotate(210 60,60)'/><use xlink:href='%23l' opacity='.56' transform='rotate(240 60,60)'/><use xlink:href='%23l' opacity='.66' transform='rotate(270 60,60)'/><use xlink:href='%23l' opacity='.75' transform='rotate(300 60,60)'/><use xlink:href='%23l' opacity='.85' transform='rotate(330 60,60)'/></g></svg>");
+    background-image: url("./loading.svg");
     background-position: 50%;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -193,9 +192,7 @@ i.icon {
     .select-panel {
       text-align: center;
       width: 100%;
-      background: #fff; // position: absolute;
-      // bottom: 0;
-      // left: 0;
+      background: #fff; 
       .panel-header {
         height: dp2rem(44);
         line-height: dp2rem(44);
